--- a/api/data/paths/admin/game/enemies/enemy/id.yaml
+++ b/api/data/paths/admin/game/enemies/enemy/id.yaml
@@ -20,6 +20,12 @@
           type: array
           items:
             type: string
+      - name: auth_id
+        in: header
+        description: auth id
+        required: true
+        schema:
+          type: string
       - name: id
         in: path
         description: ID of Enemy
@@ -89,3 +95,4 @@
     security:
       - authenticaion_key: []
       - authority_key: []
+      - auth_id: []
