--- a/api/data/paths/admin/game/enemies/file/template.yaml
+++ b/api/data/paths/admin/game/enemies/file/template.yaml
@@ -26,6 +26,7 @@
     security:
       - authenticaion_key: []
       - authority_key: []
+      - auth_id: []
   post:
     tags:
       - gameEnemies
@@ -81,3 +82,4 @@
     security:
       - authenticaion_key: []
       - authority_key: []
+      - auth_id: []
