--- a/api/data/paths/admin/members/member/id.yaml
+++ b/api/data/paths/admin/members/member/id.yaml
@@ -20,6 +20,12 @@
           type: array
           items:
             type: string
+      - name: auth_id
+        in: header
+        description: auth id
+        required: true
+        schema:
+          type: string
       - name: id
         in: path
         description: ID of member
@@ -69,6 +75,7 @@
     security:
       - authenticaion_key: []
       - authority_key: []
+      - auth_id: []
   delete:
     tags:
       - members
@@ -90,6 +97,12 @@
           type: array
           items:
             type: string
+      - name: auth_id
+        in: header
+        description: auth id
+        required: true
+        schema:
+          type: string
       - name: id
         in: path
         description: ID of member
@@ -125,3 +138,4 @@
     security:
       - authenticaion_key: []
       - authority_key: []
+      - auth_id: []
