--- a/api/data/paths/admin/auth/self.yaml
+++ b/api/data/paths/admin/auth/self.yaml
@@ -5,13 +5,13 @@
     summary: Check authenticated
     description: Check Authenticated Function
     parameters:
-      - name: authenticaion_key
+      - name: Authorization
         in: header
         description: api key
         required: true
         schema:
           type: string
-      - name: authority_key
+      - name: X-Auth-Authority
         in: header
         description: api key
         required: true
@@ -20,7 +20,7 @@
           # type: array
           # items:
           #   type: string
-      - name: auth_id
+      - name: X-Auth-ID
         in: header
         description: auth id
         required: true
