--- a/api/data/paths/admin/game/enemies/file/template.yaml
+++ b/api/data/paths/admin/game/enemies/file/template.yaml
@@ -34,21 +34,18 @@
     description: ""
     operationId: importEnemiesWithFile
     parameters:
-      - name: authenticaion_key
+      - name: Authorization
         in: header
         description: api key
         required: true
         schema:
           type: string
-      - name: authority_key
+      - name: X-Auth-Authority
         in: header
         description: api key
         required: true
         schema:
           type: string
-          # type: array
-          # items:
-          #   type: string
     requestBody:
       content:
         multipart/form-data:
