--- a/api/data/paths/admin/members/member/id.yaml
+++ b/api/data/paths/admin/members/member/id.yaml
@@ -6,22 +6,19 @@
     description: ""
     operationId: updateMemberWithForm
     parameters:
-      - name: authenticaion_key
+      - name: Authorization
         in: header
         description: api key
         required: true
         schema:
           type: string
-      - name: authority_key
+      - name: X-Auth-Authority
         in: header
         description: api key
         required: true
         schema:
           type: string
-          # type: array
-          # items:
-          #   type: string
-      - name: auth_id
+      - name: X-Auth-ID
         in: header
         description: auth id
         required: true
@@ -84,22 +81,19 @@
     description: ""
     operationId: deleteMember
     parameters:
-      - name: authenticaion_key
+      - name: Authorization
         in: header
         description: api key
         required: true
         schema:
           type: string
-      - name: authority_key
+      - name: X-Auth-Authority
         in: header
         description: api key
         required: true
         schema:
           type: string
-          # type: array
-          # items:
-          #   type: string
-      - name: auth_id
+      - name: X-Auth-ID
         in: header
         description: auth id
         required: true
