--- a/api/data/paths/admin/roles/role/index.yaml
+++ b/api/data/paths/admin/roles/role/index.yaml
@@ -6,22 +6,19 @@
     description: ""
     operationId: createRoleWithForm
     parameters:
-      - name: authenticaion_key
+      - name: Authorization
         in: header
         description: api key
         required: true
         schema:
           type: string
-      - name: authority_key
+      - name: X-Auth-Authority
         in: header
         description: api key
         required: true
         schema:
           type: string
-          # type: array
-          # items:
-          #   type: string
-      - name: auth_id
+      - name: X-Auth-ID
         in: header
         description: auth id
         required: true
@@ -59,21 +56,18 @@
     description: ""
     operationId: deleteRole
     parameters:
-      - name: authenticaion_key
+      - name: Authorization
         in: header
         description: api key
         required: true
         schema:
           type: string
-      - name: authority_key
+      - name: X-Auth-Authority
         in: header
         description: api key
         required: true
         schema:
           type: string
-          # type: array
-          # items:
-          #   type: string
       - name: roles
         in: query
         description: ID of role
