--- a/api/data/schemas/auth/AuthenticatedUser.yaml
+++ b/api/data/schemas/auth/AuthenticatedUser.yaml
@@ -25,5 +25,9 @@
         #     type: string
         #   password:
         #     type: string
+  example:
+    id: 1
+    name: 'test username'
+    authority: ['master']
   xml:
     name: AuthenticatedUser
