add example data to schema.

--- a/api/data/schemas/auth/AuthenticatedUser.yaml
+++ b/api/data/schemas/auth/AuthenticatedUser.yaml
@@ -1,5 +1,9 @@
 # AuthenticatedUser:
   type: object
+  required:
+    - id
+    - name
+    - authority
   properties:
     id:
       type: integer
