--- a/api/data/schemas/models/Member.yaml
+++ b/api/data/schemas/models/Member.yaml
@@ -2,6 +2,13 @@
   type: array
   items:
     type: object
+    required:
+      - id
+      - name
+      - email
+      - password
+      - phone
+      - roleId
     properties:
       id:
         type: integer
@@ -18,5 +25,12 @@
         type: integer
         format: int64
         description: Admin`s role id
+    example:
+      id: 1
+      name: 'test member1'
+      email: 'test1@example.com'
+      password: 'test password'
+      phone: '000-0000-0000'
+      roleId: 1
   xml:
     name: Member
