--- a/api/data/schemas/models/RolesList.yaml
+++ b/api/data/schemas/models/RolesList.yaml
@@ -2,11 +2,21 @@
   type: array
   items:
     type: object
+    required:
+      - value
+      - text
     properties:
       value:
         type: integer
         format: int64
       text:
         type: string
+  example:
+  - value: 1
+    text: 'test role1'
+  - value: 2
+    text: 'test role2'
+  - value: 3
+    text: 'test role3'
   xml:
     name: RolesList
