--- a/api/data/schemas/auth/AuthRequestResponse.yaml
+++ b/api/data/schemas/auth/AuthRequestResponse.yaml
@@ -19,7 +19,7 @@
       $ref: "./AuthenticatedUser.yaml"
   example:
     access_token: 'testTokenxxxxxxxxxxx'
-    token_type: 'Bear'
+    token_type: 'bearer'
     expires_in: 3600
     user:
       # $ref: "./AuthenticatedUser.yaml" 参照不可
