--- a/next/package.json
+++ b/next/package.json
@@ -5,9 +5,11 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "lint:css": "stylelint src/**/*.scss"
   },
   "dependencies": {
+    "axios": "^0.26.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2"
@@ -19,6 +21,10 @@
     "@typescript-eslint/parser": "^5.12.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
+    "stylelint": "^14.5.1",
     "typescript": "4.5.5"
   }
 }
