--- a/next/tsconfig.json
+++ b/next/tsconfig.json
@@ -27,7 +27,7 @@
     }
   },
   "include": [
-    "src/next-env.d.ts",
+    "next-env.d.ts",
     "src/**/*.ts",
     "src/**/*.tsx",
     "tests/unit/**/*.ts",
