--- a/next/package.json
+++ b/next/package.json
@@ -5,7 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint:next": "next lint",
+    "lint": "eslint --ext .ts,.js,.tsx,.jsx --ignore-path .gitignore . --fix",
     "lint:css": "stylelint src/**/*.scss"
   },
   "dependencies": {
