--- a/next/package.json
+++ b/next/package.json
@@ -7,7 +7,8 @@
     "start": "next start",
     "lint:next": "next lint",
     "lint": "eslint --ext .ts,.js,.tsx,.jsx --ignore-path .gitignore . --fix",
-    "lint:css": "stylelint src/**/*.scss"
+    "lint:css": "stylelint src/**/*.scss",
+    "test:unit": "jest --config jest.config.js"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -17,6 +18,8 @@
   },
   "devDependencies": {
     "@next/eslint-plugin-next": "^12.1.0",
+    "@testing-library/react": "^12.1.3",
+    "@types/jest": "^27.4.0",
     "@types/node": "17.0.18",
     "@types/react": "17.0.39",
     "@typescript-eslint/eslint-plugin": "^5.12.0",
@@ -25,9 +28,11 @@
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "jest": "^27.5.1",
     "prettier": "^2.5.1",
     "sass": "^1.49.7",
     "stylelint": "^14.5.1",
+    "ts-jest": "^27.1.3",
     "typescript": "4.5.5"
   }
 }
