--- a/next/tsconfig.json
+++ b/next/tsconfig.json
@@ -15,8 +15,8 @@
     "jsx": "preserve",
     "incremental": true,
     "types": [
-      // "@types/jest",
-      // "jest",
+      "@types/jest",
+      "jest",
       "node"
     ],
     "baseUrl": ".",
