--- a/next/package.json
+++ b/next/package.json
@@ -9,7 +9,10 @@
     "lint": "eslint --ext .ts,.js,.tsx,.jsx --ignore-path .gitignore . --fix",
     "lint:css": "stylelint src/**/*.scss",
     "test:unit": "jest --config jest.config.js",
-    "test:e2e": "cypress open --browser chrome"
+    "test:e2e": "cypress open --browser chrome",
+    "prepare": "cd .. && husky install next/.husky",
+    "create-precommit": "cd .. && husky add next/.husky/pre-commit \"cd next && yarn lint-staged\"",
+    "lint-staged": "lint-staged"
   },
   "dependencies": {
     "axios": "^0.26.0",
@@ -30,11 +33,20 @@
     "eslint-config-next": "12.0.10",
     "eslint-config-prettier": "^8.3.0",
     "eslint-plugin-prettier": "^4.0.0",
+    "husky": "^7.0.4",
     "jest": "^27.5.1",
+    "lint-staged": "^12.3.4",
     "prettier": "^2.5.1",
     "sass": "^1.49.7",
     "stylelint": "^14.5.1",
     "ts-jest": "^27.1.3",
     "typescript": "4.5.5"
+  },
+  "lint-staged": {
+    "*.ts": "eslint --cache --fix",
+    "*.tsx": "eslint --cache --fix",
+    "*.js": "eslint --cache --fix",
+    "*.jsx": "eslint --cache --fix",
+    "*.css": "stylelint --fix"
   }
 }
