--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 
 services:
-  app:
+  app-next:
     build: ./app
     container_name: ${PROJECT_NAME}_app-next
     volumes:
@@ -20,11 +20,11 @@ services:
     networks:
       default:
 
-  nginx:
-    build: ./nginx
+  nginx-next:
+    build: ./nginxNext
     container_name: ${PROJECT_NAME}_nginx-next
     volumes:
-      - ./nginx/defaultNext.conf:/etc/nginx/conf.d/default.conf
+      - ./nginxNext/default.conf:/etc/nginx/conf.d/default.conf
       # - ./frontend:/var/www/frontend/
     depends_on:
       - app
@@ -39,7 +39,7 @@ services:
       default:
         ipv4_address: ${SERVICE_NETWORK_IP}
 
-  db:
+  db-next:
     platform: 'linux/amd64'
     build: ./mysql
     container_name: ${PROJECT_NAME}_db-next
@@ -56,7 +56,7 @@ services:
     networks:
       default:
 
-  node:
+  node-next:
     build: ./node
     container_name: ${PROJECT_NAME}_node-next
     volumes:
