--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -12,7 +12,7 @@ services:
     expose:
       - "${PHP_FPM_PORT}"
     depends_on:
-      - db
+      - db-next
     environment:
       TZ: "Asia/Tokyo"
       APP_URL: ${APP_URL}
@@ -27,7 +27,7 @@ services:
       - ./nginxNext/default.conf:/etc/nginx/conf.d/default.conf
       # - ./frontend:/var/www/frontend/
     depends_on:
-      - app
+      - app-next
     ports:
       - "${NGINX_HOST_HTTP_PORT}:80"
       # - "${NGINX_HOST_HTTPS_PORT}:443"
@@ -62,9 +62,11 @@ services:
     volumes:
       - ./next:/frontend
     depends_on:
-      - app
+      - app-next
     ports:
       - "${NODE_APPLICATION_PORT}:${NODE_APPLICATION_PORT}"
+    networks:
+      default:
 
   # redis:
   #   image: redis:5.0-alpine
