--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -21,10 +21,10 @@ services:
       default:
 
   nginx-next:
-    build: ./nginxNext
+    build: ./node/nginx
     container_name: ${PROJECT_NAME}_nginx-next
     volumes:
-      - ./nginxNext/default.conf:/etc/nginx/conf.d/default.conf
+      - ./node/nginx/default.conf:/etc/nginx/conf.d/default.conf
       # - ./frontend:/var/www/frontend/
     depends_on:
       - app-next
