add next/link, next/router .

--- a/next/package.json
+++ b/next/package.json
@@ -5,8 +5,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint:next": "next lint",
-    "lint": "eslint --ext .ts,.js,.tsx,.jsx --ignore-path .gitignore . --fix",
+    "lint": "next lint --fix",
+    "lint:eslint": "eslint --ext .ts,.js,.tsx,.jsx --ignore-path .gitignore . --fix",
     "lint:css": "stylelint src/**/*.scss",
     "test:unit": "jest --config jest.config.js",
     "test:e2e": "cypress open --browser chrome",
