--- a/next/package.json
+++ b/next/package.json
@@ -36,6 +36,7 @@
     "husky": "^7.0.4",
     "jest": "^27.5.1",
     "lint-staged": "^12.3.4",
+    "next-http-proxy-middleware": "^1.2.2",
     "prettier": "^2.5.1",
     "sass": "^1.49.7",
     "stylelint": "^14.5.1",
