--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -9,12 +9,25 @@ LOG_CHANNEL=stack
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
+# DB_CONNECTION=mysql
+# DB_HOST=127.0.0.1
+# DB_PORT=3306
+# DB_DATABASE=laravel
+# DB_USERNAME=root
+# DB_PASSWORD=
+
 DB_CONNECTION=mysql
-DB_HOST=127.0.0.1
-DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_MASTER_HOST=127.0.0.1
+DB_MASTER_PORT=3306
+DB_MASTER_DATABASE=laravel
+DB_MASTER_USERNAME=root
+DB_MASTER_PASSWORD=
+
+DB_SLAVE_HOST="${DB_MASTER_HOST}"
+DB_SLAVE_PORT="${DB_MASTER_PORT}"
+DB_SLAVE_DATABASE="${DB_MASTER_DATABASE}"
+DB_SLAVE_USERNAME="${DB_MASTER_USERNAME}"
+DB_SLAVE_PASSWORD="${DB_MASTER_PASSWORD}"
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
