--- a/mysql/my.cnf
+++ b/mysql/my.cnf
@@ -2,6 +2,11 @@
 character-set-server=utf8mb4
 collation-server = utf8mb4_bin
 
+# バイナリログを出力
+log-bin
+# master & slave identifier
+server-id=101
+
 # MySQL8
 default_authentication_plugin=mysql_native_password
 
