modify log setting.

--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -65,6 +65,14 @@ PUSHER_APP_CLUSTER=mt1
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
 
+# Log Setting(defalt : storage_path('logs/*.log'))
+# LOG_ACCESS_PATH=/usr/local/app/log/access.log
+# LOG_ERROR_PATH=/usr/local/app/log/error.log
+# LOG_SQL_PATH=/usr/local/app/log/sql.log
+LOG_ACCESS_LEVEL=info
+LOG_ERROR_LEVEL=error
+LOG_SQL_LEVEL=info
+
 APP_SLACK_CHANNEL="channel_title"
 APP_SLACK_NAME="bot-name"
 APP_SLACK_ICON=:ghost:
