add redis conatiner.

--- a/docker-compose.next.yml
+++ b/docker-compose.next.yml
@@ -72,14 +72,19 @@ services:
     networks:
       default:
 
-  # redis:
-  #   image: redis:5.0-alpine
-  #   container_name: ${PROJECT_NAME}_redis
-  #   volumes:
-  #     - redis-store:/data
+  redis:
+    image: redis:5.0-alpine
+    container_name: ${PROJECT_NAME}_redis-next
+    volumes:
+      - redis-volume:/data
+    networks:
+      default:
 
 volumes:
-  # redis-store:
+  redis-volume:
+    name: ${REDIS_VOLUME_NAME}
+    # driver: local
+    external: true
   app-volume-store:
     name: ${VOLUME_NAME}
     # driver: local
