--- a/.env_example
+++ b/.env_example
@@ -10,6 +10,7 @@ SERVICE_NETWORK_IP=172.18.0.10
 ### VOLUME #################################################
 
 VOLUME_NAME=${PROJECT_NAME}-store
+REDIS_VOLUME_NAME=${PROJECT_NAME}-redis-store
 
 ### PHP-fpm #################################################
 
