add redis conatiner setting.

--- a/.env_example
+++ b/.env_example
@@ -10,7 +10,6 @@ SERVICE_NETWORK_IP=172.18.0.10
 ### VOLUME #################################################
 
 VOLUME_NAME=${PROJECT_NAME}-store
-REDIS_VOLUME_NAME=${PROJECT_NAME}-redis-store
 
 ### PHP-fpm #################################################
 
@@ -34,6 +33,11 @@ NGINX_FRONT_END_PORT=
 MYSQL_HOST=
 MYSQL_PORT=3306
 MYSQL_ROOT_PASSWORD=
+
+### REDIS #################################################
+
+REDIS_VOLUME_NAME=${PROJECT_NAME}-redis-store
+REDIS_PORT=6379
 
 ### NODE #################################################
 
