--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -38,6 +38,7 @@ SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
+# REDIS_HOST=host.docker.internal
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
