--- a/app/backend/composer.json
+++ b/app/backend/composer.json
@@ -15,6 +15,7 @@
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.5",
         "maatwebsite/excel": "^3.1",
+        "predis/predis": "^1.1",
         "tymon/jwt-auth": "^1.0.2"
     },
     "require-dev": {
