--- a/app/backend/.env.example
+++ b/app/backend/.env.example
@@ -42,6 +42,8 @@ MEMCACHED_HOST=127.0.0.1
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
+REDIS_DB=0
+REDIS_CLIENT=predis
 
 MAIL_MAILER=smtp
 MAIL_HOST=mailhog
